--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-three/fiber": "^8.17.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.2.1",
     "framer-motion": "^11.4.0",
     "lucide-react": "^0.438.0",
     "next": "14.2.7",
