--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "embla-carousel-react": "^8.2.1",
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.438.0",
-    "next": "14.2.7",
+    "next": "^14.2.13",
+    "next-sanity": "^9.5.0",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.12.7",
+    "sanity": "^3.57.4",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.168.0",
