--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/tabs": "^2.0.36",
     "@nextui-org/theme": "^2.2.10",
+    "@portabletext/react": "^3.1.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
